@@ -2,6 +2,9 @@ File: bsort.c
 Original provenience: Mälardalen benchmark suite,
 Source: http://www.mrtc.mdh.se/projects/wcet/wcet_bench/bsort100/bsort100.c
 
+2016-04-20:
+- Check upon call of bsort_return that bsort_Array is sorted.
+
 2016-03-15:
 - Renamed file from bsort100.c to bsort.c.
 - Introduced comments to split file in sections for forward 
